# fastapi-backend-base

./: .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml  mian.yml
backend/: .flake8  Dockerfile  alembic.ini  logconfig.yml  pyproject.toml
backend/migrations/versions/: d7effbf2730a_init.py
backend/requirements/: base.txt  dev.txt
backend/src/: app.py  config.py  db.py  main.py
backend/src/api/: health.py  routes.py
backend/src/api/v1/: health.py  meme.py
backend/src/core/: config.py  utils.py
backend/src/db/: session.py  utils.py
backend/src/db/clients/: pg_client.py
backend/src/migrations/: env.py
backend/src/models/: base.py  meme.py
backend/src/tests/: test_routes.py
mongodb/: Dockerfile
proxy/: Dockerfile  docker-entrypoint.sh
proxy/templates/: nginx.conf.j2  site.conf.j2
