[tool.poetry]
name = "fastapi-backend-base"
version = "0.1.0"
description = ""
authors = ["nickatnight <nick@night.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
asyncpg = "0.24.0"
fastapi = "^0.65.1"
sqlmodel = "^0.0.6"
aioredis = "^2.0.1"
fastapi-limiter = "0.1.4"
psycopg2-binary = "2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "21.5b1"
flake8 = "^3.9.2"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
